--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.projectlombok:lombok:1.18.4')
+	testImplementation('org.mockito:mockito-core:2.23.4')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
+	testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-params:5.3.2')
+    testImplementation('org.mockito:mockito-junit-jupiter:2.23.4')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')
 }
