--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-params:5.3.2')
     testImplementation('org.mockito:mockito-junit-jupiter:2.23.4')
 	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')
+
+    annotationProcessor('org.projectlombok:lombok:1.18.4')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.4')
 }
