--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
 	}
 }
 
@@ -14,6 +15,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 group = 'com.pagecomp.brewapp'
 version = '0.0.1-SNAPSHOT'
@@ -26,11 +28,12 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
-	//implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.projectlombok:lombok:1.18.4')
+	implementation 'mysql:mysql-connector-java:8.0.13'
 	testImplementation('org.mockito:mockito-core:2.23.4')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
@@ -41,4 +44,8 @@ dependencies {
 
     annotationProcessor('org.projectlombok:lombok:1.18.4')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.4')
+}
+
+test {
+    useJUnitPlatform()
 }
